addons/k8s-gatekeeper/templates/medtech-backup_and_recovery_rto_rpo-constrainttemplate.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: medtech-backup_and_recovery_rto_rpo
  annotations:
    rulehub.id: medtech.backup_and_recovery_rto_rpo
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  crd:
    spec:
      names:
        kind: MedtechBackup_and_recovery_rto_rpoConstraint
      validation:
        openAPIV3Schema:
          type: object
          properties:
            # add schema for parameters
            enabled:
              type: boolean
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package rulehub.medtech.backup_and_recovery_rto_rpo
      import future.keywords.if

      default deny = []

      # Example: deny with a message
      deny[msg] {
        input.review.kind.kind == "Deployment"
        msg := "medtech.backup_and_recovery_rto_rpo: example violation"
      }
